--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="tab-button">Zapisane</button>
             </div>
             <div class="user-profile">
-                <img src="/images/Popraw.png" alt="Profil">
+                <img src="./images/Popraw.png" alt="Profil">
             </div>
         </header>
         
