--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         </nav>
     </footer>
     
-  <!--<script src="script.js"></script>-->
+<script src="script.js"></script>-
 </body>
 </html>
