--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
-            <a href="#" class="nav-link">
+            <a href="./allEv/allev.html" class="nav-link">
                 <i class="fas fa-search"></i>
                 <span>Wyszukaj</span>
             </a>
-            <a href="#" class="nav-link">
+           <a href="./allEv/allev.html" class="nav-link">
                 <i class="fas fa-bullhorn"></i>
                 <span>Ogłoszenia</span>
             </a>
