--- a/event/eventtest1/eventpage1.html
+++ b/event/eventtest1/eventpage1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eventplacehold</title>
-    <link rel="stylesheet" href="./eventpage.css">
+    <link rel="stylesheet" href="./eventpage1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -21,8 +21,8 @@
         </div>
         <div class="eventpng"></div>
         <div class="eventdesc">
-            <h3 class="eventname">Spotkanie Sekcji wspinaczkowej</h3>
-            <h4 class="eventdep">Wszystkie wydziały</h4>
+            <h3 class="eventname"></h3>
+            <h4 class="eventdep"></h4>
             <div class="event-timeanddate">
             <h3 class="date">21.04.2024</h3>
             <h3 class="time">17:00</h3></div>
@@ -42,7 +42,7 @@
             <div class="showonmaptxt">Pokaż na mapie</div>
         </div>
     </div>
-<script src="./eventpage.js" type="module"></script>  
+<script src="./eventpage1.js" type="module"></script>  
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore-compat.js"></script> 
 </body>
