--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="tab-button">Zapisane</button>
             </div>
             <div class="user-profile">
-                <img src="/images/Popraw.png" alt="Profil">
+                <img src="./images/Popraw.png" alt="Profil">
             </div>
         </header>
         
@@ -72,7 +72,7 @@
                 <i class="fas fa-search"></i>
                 <span>Wyszukaj</span>
             </a>
-            <a href="#" class="nav-link">
+            <a href="./allevents/allev.html" class="nav-link">
                 <i class="fas fa-bullhorn"></i>
                 <span>Ogłoszenia</span>
             </a>
