--- a/event/eventtest1/eventpage2.html
+++ b/event/eventtest1/eventpage2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eventplacehold</title>
-    <link rel="stylesheet" href="./eventpage.css">
+    <link rel="stylesheet" href="./eventpage2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
                 <p class="namep">Spotkanie organizacyjne</p>
             </div>
         </div>
-        <div class="eventpng"></div>
+        <img class="eventpng">
         <div class="eventdesc">
             <h3 class="eventname">Spotkanie Sekcji wspinaczkowej</h3>
             <h4 class="eventdep">Wszystkie wydziały</h4>
@@ -42,7 +42,7 @@
             <div class="showonmaptxt">Pokaż na mapie</div>
         </div>
     </div>
-<script src="./eventpage.js" type="module"></script>  
+<script src="./eventpage2.js" type="module"></script>  
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore-compat.js"></script> 
 </body>
