--- a/event/eventtest1/eventpage2.html
+++ b/event/eventtest1/eventpage2.html
@@ -19,7 +19,7 @@
                 <p class="namep">Spotkanie organizacyjne</p>
             </div>
         </div>
-        <img class="eventpng">
+        <img src = ""class="eventpng">
         <div class="eventdesc">
             <h3 class="eventname">Spotkanie Sekcji wspinaczkowej</h3>
             <h4 class="eventdep">Wszystkie wydziały</h4>
