--- a/event/eventtest1/eventpage2.html
+++ b/event/eventtest1/eventpage2.html
@@ -38,8 +38,7 @@
             Zapisz się!
         </div>
         <div class="showonmap">
-            <div class="showonmapico"></div>
-            <div class="showonmaptxt">Pokaż na mapie</div>
+<a href="mapPage/lokalizacja.html" class="rounded-button">Go to Map</a>
         </div>
     </div>
 <script src="./eventpage2.js" type="module"></script>  
