--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <header class="header">
             <div class="tabs">
-                <button class="tab-button active">Wydarzenia</button>
+                <button class="tab-button active" onclick="javascript:location.href='https://nexisus.github.io/hackaton-spring-wat-2024/allEv/allev.html'">Wydarzenia</button>
                 <button class="tab-button">Zapisane</button>
             </div>
             <div class="user-profile">
-                <img src="./images/Popraw.png" alt="Profil">
+                <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/Popraw.png?alt=media&token=6100b180-d55b-4b3a-a658-1c314f77debc" alt="Profil">
             </div>
         </header>
         
@@ -24,23 +24,23 @@
             <p>Wszystkie wydarzenia z Twojej okolicy</p>
             <div class="events">
                 <div class="event">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Spotkanie Sekcji S5">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/s5(1).jpg?alt=media&token=c351f734-bc4b-409f-8145-5350238e29d7" alt="Spotkanie Sekcji S5">
                     <div class="event-details">
-                        <p>Spotkanie Sekcji S5</p>
+                        <p>Spotkanie Organizacyjne Sekcji S5</p>
                         <span>Wszystkie Wydziały</span>
                     </div>
                 </div>
                 <div class="event">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Bezpłatne Korepetycje">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/441953910_1905304716587727_1040494686292961609_n.png?alt=media&token=97a95ba9-8a6a-4a14-94ca-6e1362ccf9c5" alt="Trening sekcji boksu">
                     <div class="event-details">
-                        <p>Bezpłatne Korepetycje</p>
-                        <span>Wydział Cybernetyki</span>
+                        <p>Trening sekcji boksu</p>
+                        <span>Wszystkie Wydziały</span>
                     </div>
                 </div>
                 <div class="event">
-                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Title">
+                    <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/bieganie(1).jpg?alt=media&token=1f672afe-ea42-4146-bb8f-9bb31b43a286" alt="Title">
                     <div class="event-details">
-                        <p>Wspólny trening do egzaminu</p>
+                        <p>Wspólne bieganie</p>
                         <span>Wszystkie Wydziały</span>
                     </div>
                 </div>
@@ -50,9 +50,9 @@
         <section class="popular-organizers">
             <h2>Najpopularniejsi organizatorzy</h2>
             <div class="organizers">
-                <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Organizer 1">
-                <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Organizer 2">
-                <img src="https://firebasestorage.googleapis.com/v0/b/hackaton-b2efc.appspot.com/o/141823-jak_to_rozwiazac_matematyka_dyskretna_czesc_i-1488453493.jpg?alt=media&token=5306e6e9-77d9-47c1-9971-d290c8a0ba22" alt="Organizer 3">
+                <img src="https://i.postimg.cc/XNwggc8P/wcy.png" alt="Organizer 1">
+                <img src="https://i.postimg.cc/mD778BQ9/SSW.jpg" alt="Organizer 2">
+                <img src="https://i.postimg.cc/gjqqkmjp/rzepa.jpg" alt="Organizer 3">
             </div>
         </section>
         
@@ -72,7 +72,7 @@
                 <i class="fas fa-search"></i>
                 <span>Wyszukaj</span>
             </a>
-            <a href="./allevents/allev.html" class="nav-link">
+            <a href="#" class="nav-link">
                 <i class="fas fa-bullhorn"></i>
                 <span>Ogłoszenia</span>
             </a>
