--- a/eventtest1/eventpage2.html
+++ b/eventtest1/eventpage2.html
@@ -37,7 +37,7 @@
         <div class="signin">
             Zapisz się!
         </div>
-        <div class="showonmap">
+        <div class="showonmap" onclick="javascript:location.href=`./mapPage/lokalizacja.html`">
             <div class="showonmapico"></div>
             <div class="showonmaptxt">Pokaż na mapie</div>
         </div>
