--- a/eventtest1/eventpage2.html
+++ b/eventtest1/eventpage2.html
@@ -37,10 +37,7 @@
         <div class="signin">
             Zapisz się!
         </div>
-        <div class="showonmap" onclick="javascript:location.href=`./mapPage/lokalizacja.html`">
-            <div class="showonmapico"></div>
-            <div class="showonmaptxt">Pokaż na mapie</div>
-        </div>
+<a href="mapPage/lokalizacja.html" class="rounded-button">Go to Map</a>
     </div>
 <script src="./eventpage.js" type="module"></script>  
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app-compat.js"></script>
