--- a/eventtest1/eventpage2.html
+++ b/eventtest1/eventpage2.html
@@ -37,7 +37,7 @@
         <div class="signin">
             Zapisz się!
         </div>
-<a href="mapPage/lokalizacja.html" class="rounded-button">Go to Map</a>
+<a href="../mapPage/lokalizacja.html" class="rounded-button">Go to Map</a>
     </div>
 <script src="./eventpage.js" type="module"></script>  
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app-compat.js"></script>
